Bug 1036710 - Use UniquePtr to manage ownership of the array of PNK_CASE nodes in table switches.  r=jorendorff

--HG--
extra : rebase_source : 35a808887ea5dd2dfbd0b81e8628e9a38563c292